connect with backend

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -18,5 +18,7 @@
     "Pain Locations": "مواقع الألم",
     "Vous avez un compte": "لديك حساب ؟",
     "Vous n'avez pas un compte": "ليس لديك حساب ؟",
-    "S'incrire": "سجل"
+    "S'incrire": "سجل",
+    "AVG": "متوسط",
+    "Symptoms": "الأعراض"
 }
