--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,7 @@
     "Pain Locations": "Pain Locations",
     "Vous avez un compte": "Vous avez un compte",
     "Vous n'avez pas un compte": "You do not have an account ?",
-    "S'incrire": "Sign Up"
+    "S'incrire": "Sign Up",
+    "AVG": "Average",
+    "Symptoms": "Symptoms"
 }
