--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,5 +18,7 @@
     "Pain Locations": "Zones de douleur",
     "Vous avez un compte": "You have an account ?",
     "Vous n'avez pas un compte": "Vous n'avez pas un compte ?",
-    "S'incrire": "S'incrire"
+    "S'incrire": "S'incrire",
+    "AVG": "Moyenne",
+    "Symptoms": "Symptômes"
 }
