create profile and authentification pages and fixe some problems and update the nav and homa page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,8 +4,8 @@
     "Home": "Home",
     "Articles": "articles",
     "Blogs": "Blogs",
-    "HomeQuote": "EMPOWERING WOMEN WITH COMPASSION AND CARE, EVERY WOMAN DESERVES A",
-    "HomeQuoteReste":"PAIN-FREE JOURNEY TO WELLNESS",
+    "HomeQuote": "Nurturing wellness with compassion, every woman deserves a",
+    "HomeQuoteReste":"pain-free journey",
     "tryNow": "Try Now",
     "DASHBOARD": "Dashboard",
     "Hi":"Hi",
