update articles page

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -20,5 +20,7 @@
     "Vous n'avez pas un compte": "ليس لديك حساب ؟",
     "S'incrire": "سجل",
     "AVG": "متوسط",
-    "Symptoms": "الأعراض"
+    "Symptoms": "الأعراض",
+    "Feeling":"الشعور",
+    "PainWorses":"تردد الألم"
 }
