--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,7 @@
     "Vous n'avez pas un compte": "You do not have an account ?",
     "S'incrire": "Sign Up",
     "AVG": "Average",
-    "Symptoms": "Symptoms"
+    "Symptoms": "Symptoms",
+    "Feeling":"Feelings",
+    "PainWorses":"Pain Worses"
 }
