--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -20,5 +20,7 @@
     "Vous n'avez pas un compte": "Vous n'avez pas un compte ?",
     "S'incrire": "S'incrire",
     "AVG": "Moyenne",
-    "Symptoms": "Symptômes"
+    "Symptoms": "Symptômes",
+    "Feeling":"Sentiments",
+    "PainWorses":"douleurs"
 }
